--- a/src/components/CampusTab/CampusAddForm.css
+++ b/src/components/CampusTab/CampusAddForm.css
@@ -1,42 +1,51 @@
 .CampusAddForm{
-    /* padding-top: 10px;
-    margin: 10px;
-    width: 350px; */
+    padding-top: 15%;
+  
+    margin-left: 37%;
+    height: 50vh;
+    width: 35vw;
+   
   
 }
 
 .campus-addform-element {
-/* 
-    float: right;
-    margin: 10px; */
+   padding-top: 10px;
+    font-size: 40pt;
+    background: rgba(218,165,32,0.5);
 }
 
 .campus-addform-label {
-    margin: 5px;
-    color: goldenrod;
+  margin-left: 30px;
+    color: black;
+    font-weight: bold;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
-    font-size: 12pt;
+    font-size: 20pt;
   
 }
 
 .campus-addform-input {
-   
-    
-    background: none;
+ 
+    font-size: 20pt;
+    margin-left: 50px;
+    border: none;
+    border-bottom: 1px solid goldenrod;
+    background: transparent;
+    outline: none;
     color: goldenrod;
-    width: 100px;
-    padding: 0 20px;
-    border:none;
+    width: 300px;
+    border-radius: 0%;
+    text-decoration: underline;
     
    
   
-    font-size: 10pt;
+   
 }
 
 .campus-addform-button {
-    padding: 10px;
+    margin-left: 70%;
+   margin-top: -2rem;
     background: rgba(236, 244, 255, 0);
-    color: goldenrod;
+    color: black;
     border: none;
 
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
@@ -47,4 +56,9 @@
     color: #cf8484;
     padding: 10px;
     text-shadow: 1px 1px rgba(207, 132, 132, 0.2);
+}
+
+#addCampus{
+    height: 100vh;
+    background: url("../../assets/dining.jpg") no-repeat center center/cover fixed;
 }
