--- a/src/components/CampusTab/CampusCard.css
+++ b/src/components/CampusTab/CampusCard.css
@@ -1,32 +1,24 @@
 .CampusCard {
-    margin-top: -50px;
-    width: 160px;
-    padding: 10px;
-    width: 495px;
-    /* text-align: center; */
-    margin-left: 32%;
-    flex-direction: row;
+    width: 100%;
+    padding: 8px;
+    text-align: center;  
+   
 }
 
 .campus-card-img {
-    margin-top: 100px;
+ 
     height: 150px;
     width: 200px;
 }
 
-.campus-card-info {
-    background:linear-gradient(rgba(32, 56, 94, 0.5)rgba(32, 56, 94, 0.5));
-    width: 150px;
-    text-align: center;
-    padding-top: 10px;
-}
 
 .campus-card-title {
-    margin-left: 35px;
+    /* margin-left: 35px; */
     color: goldenrod;
     text-decoration: none;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 20pt;
+    padding: 0px 5px;
     font-weight: bold;
 }
 
@@ -41,13 +33,10 @@
 }
 
 .campus-card-element {
-    display: flex;
-    margin-top: -100px;
-    margin-left: 320px;
- 
-
+    /* display: flex; */
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 15pt;
+    /* margin: 0em 1em */
 }
 .campus-card-button:hover {
     background-color:darkgreen;
@@ -61,7 +50,7 @@
     text-decoration: none;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 10pt;
-    margin-top: 15px;
+    margin: 0px 5px;
     padding: 5px;
 }
 
@@ -75,7 +64,6 @@
     border-radius: 0.5rem;
 }
 #students{
-    margin-left: 45px;
     color: goldenrod;
 }
 
