--- a/src/components/CampusTab/CampusMain.css
+++ b/src/components/CampusTab/CampusMain.css
@@ -1,20 +1,16 @@
-/* .campus-main {
-    width: 750px;
-    background: rgba(0, 0, 0, 0.1);
-   
-} */
+
 
 .campus-nav {
-    height: 42px;
-    margin-left: 25%;
-    width: 50%;
+    margin-top: 1rem;
+    text-align: right;
+    margin-right: 100px;
+ 
 }
 
 .campus-nav-element {
-    margin-top: 10rem;
-    float: right;
+    margin-top: 4rem;
     text-decoration: none;
-    font-size: 20pt;
+    font-size: 18pt;
     font-weight: bold;
     color:goldenrod;
 }
@@ -24,8 +20,9 @@
     border-radius: 0.5rem;
 }
 
-.campus-grid {
-   
-    flex-direction: row;
-    /* flex-wrap: wrap; */
+#bg_1{
+    height: 150vh;
+    width: 200vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("../../assets/Untitled-1.png")no-repeat center center/cover fixed;
+    /* background: url("../../assets/Untitled-1.png") no-repeat center center/cover fixed; */
 }
