--- a/src/components/CampusTab/CampusView.css
+++ b/src/components/CampusTab/CampusView.css
@@ -1,14 +1,21 @@
+
+  
+  
+
 .campusview-main{
-    height: 220px;
-    width: 640px;
-    background: rgba(29, 37, 49, 0.5);
-    margin: 20px 20px 0 20px;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+  
+ 
 }
 
 .campusview-img {
     display: inline-block;
-    height: 200px;
-    width: 300px;
+    height: 300px;
+    width: 400px;
     margin: 10px;
     float: left;
 }
@@ -21,48 +28,45 @@
 }
 
 .campusview-title {
-    margin: 5px 10px;
-    padding: 2px;
-    color: #84a2cf;
-    text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
-    font-size: 14pt;
+
+    margin-left: 4.5rem;
+    margin-top: 2rem;
+    color: goldenrod;
+    font-size: 25pt;
     font-weight: bold;
-    border-bottom: 1px solid rgba(132, 162, 207, 0.2);
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    
+    
 }
 
 .campusview-bio {
-    margin: 5px 20px;
-    color: #84a2cf;
-    text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
+    
+    margin-left: 3.9rem;
+    
+    color: goldenrod;
     font-size: 10pt;
+    font-weight: bold;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-.campusview-actionbar {
+/* .campusview-actionbar {
     margin: 0 20px;
     height: 50px;
     width: 640px;
-    background: rgba(29, 37, 49, 0.5);
-}
+ 
+} */
 
-.campusview-address {
-    margin: 10px 30px;
-    color: #84a2cf;
-    text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
-    font-size: 10pt;
-    display: inline-block;
-    margin-top: 15px;
-    float: right;
-}
 
-.campusview-actions {
+
+/* .campusview-actions {
     margin: 10px 30px;
     display: inline-block;
     float: left;
-}
+} */
 
-.campusview-buttons {
-    padding: 10px;
-    background: rgba(236, 244, 255, 0);
+.campusview-button {
+  margin-left: 28rem;
+    background-color: #000;
     color: goldenrod;
     border: none;
     text-decoration: none;
@@ -74,7 +78,12 @@
     border-radius: 0.5rem;
 }
 
-.campusview-students {
+.btn-remove:hover{
+    background-color: darkred;
+    border-radius: 0.5rem;
+}
+
+/* .campusview-students {
     width: 640px;
     background: rgba(29, 37, 49, 0.5);
     margin: 20px 20px 0 20px;
@@ -84,4 +93,5 @@
 .studentgrid-title {
     margin: 10px 20px 0 20px;
     text-decoration: none;
-}
+} */
+
