--- a/src/components/StudentTab/StudentAddForm.css
+++ b/src/components/StudentTab/StudentAddForm.css
@@ -1,24 +1,30 @@
-.StudentAddForm{
-   
-    margin: 10px;
-    width: 350px;
-    background: rgba(29, 37, 49, 0.5);
+
+@import url('https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap');
+
+
+
+#StudentAddForm{
+ height:100vh;
+width:200vh;
+background:url("../../assets/Oath.jpg") no-repeat center center/cover;
+
 }
 
 .student-addform-element {
-    margin: 10px;
+    padding-top: 15rem;
+    margin-left: 30rem;
 }
 
 .student-addform-label {
-    margin: 5px;
-    color: #84a2cf;
+ font-family: 'Pinyon Script', cursive;
+    color: darkred;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
-    font-size: 12pt;
+    font-size: 30pt;
     font-weight: bold;
 }
 
 .student-addform-input {
-    background: none;
+   
     color: #84a2cf;
     width: 100px;
     margin: 0 5px;
@@ -31,11 +37,10 @@
 }
 
 .student-addform-button {
-    padding: 10px;
-    background: rgba(236, 244, 255, 0);
-    color: #84a2cf;
+    margin-left: 40rem;
+    color: white;
+    text-decoration: none;
     border: none;
-    text-decoration: underline;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 12pt;
 }
