--- a/src/components/StudentTab/StudentCard.css
+++ b/src/components/StudentTab/StudentCard.css
@@ -1,12 +1,18 @@
 .student-card {
-margin-left: 30rem;
-flex-direction: row;
+    display: inline-block;
+    margin-left: 10px;
+    width: 180px;
+    height: 190px;
+    
+   
     text-align: center;
+    
 }
 
 .student-card-img {
-    height: 100px;
-    width: 150px;
+    margin-top: 15px;
+    height: 175px;
+    width: 165px;
 }
 
 .student-card-info {
@@ -17,28 +23,19 @@ flex-direction: row;
 }
 
 .student-card-title {
-    margin: 10px;
-    color: goldenrod;
-    text-decoration: none;
-    font-size: 12pt;
-    font-weight: 500;
- 
-}
-
-.student-card-title:hover {
     
-    background-color: goldenrod;
-    color: #000000;
-    border-radius: 0.5rem;
+    color: goldenrod;
+    text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
+    font-size: 12pt;
 
+    font-weight: bold;
 }
 
 .student-card-element {
-    margin-left: 20px;
-    color: goldenrod;
-    text-decoration: none;
-    font-size: 15pt;
-    font-weight: bold;
+    margin: 5px;
+    color:goldenrod;
+    text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
+    font-size: 10pt;
 }
 
 .student-card-button {
@@ -51,3 +48,9 @@ flex-direction: row;
     padding: 0 5px;
 }
 
+.studentsPage{
+  
+    height: 30vh;
+    padding-left: 24rem;
+    padding-top: 15rem;
+}
