--- a/src/components/StudentTab/StudentView.css
+++ b/src/components/StudentTab/StudentView.css
@@ -2,15 +2,16 @@
 
     height: 220px;
     width: 640px;
-    background: rgba(29, 37, 49, 0.5);
     margin-left: 30%;
 }
 
 .studentview-img {
+   
     display: inline-block;
     height: 200px;
     width: 300px;
-    margin: 10px;
+    margin-top: 150px;
+    padding-left: 125px;
     float: left;
 }
 
@@ -24,18 +25,19 @@
 }
 
 .studentview-title {
-    
-    padding: 2px;
-    color: #84a2cf;
+    padding-left: 30px;
+    padding-top: 175px;
+    color: goldenrod;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 14pt;
     font-weight: bold;
-    border-bottom: 1px solid rgba(132, 162, 207, 0.2);
+   
 }
 
 .studentview-gpa {
-    margin: 5px 20px;
-    color: #84a2cf;
+    padding-left: 35px;
+    margin: 9px 20px;
+    color:goldenrod;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 10pt;
 }
@@ -44,51 +46,49 @@
     margin-left: 30%;
     height: 50px;
     width: 640px;
-    background: rgba(29, 37, 49, 0.5);
+   
 }
 
 .studentview-actions {
-    margin-left: 80%;
+   
     display: inline-block;
-    float: left;
+    float: right;
 }
-
 .studentview-buttons {
-    
-    padding: 10px;
+    margin-top: -26rem;
+   
+    display: inline-block;
+    float: right;
     background: rgba(236, 244, 255, 0);
-    color: #84a2cf;
+    color: goldenrod;
     border: none;
     text-decoration: underline;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 10pt;
 }
 
-.campusbar {
+.studentview-button{
+    margin-top: -15rem;
+    margin-left: 50rem;
 
+}
+.campusbar {
+    margin-top: 150px;
     width: 640px;
-    background: rgba(29, 37, 49, 0.5);
     margin-left: 30%;
     padding-top: 5px;
 }
 
-.campusbar-header {
-
-    text-decoration: none;
-}
-
-.campusbar-card {
-    margin: 10px 20px;
-}
-
-.campusEditSection {
-
-   
-}
 .campusview-selector {
+    margin-left: 100px;
     background: rgba(236, 244, 255, 0.5);
-    color: #84a2cf;
-    border: 1px solid #84a2cf;
+    color: goldenrod;
+    border: 1px solid #000000;
     text-shadow: 1px 1px rgba(132, 162, 207, 0.2);
     font-size: 10pt;
+}
+#SViewBg{
+    width: 200vh;
+    height: 200vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("../../assets/classroom.jpg")no-repeat center center/cover fixed;
 }
