--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,22 @@
 body {
-  margin: 0;
-  background: url("./assets/hogwartsDark.jpg") no-repeat fixed;
+  margin: 10px;
+  background: url("./assets/home.jpg") no-repeat center center/cover fixed;
   background-size: cover;
+  background-position: center;
+  font-family: 'Harry Potter Regular';
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: 'Harry Potter Regular';
+  
+}
+
+html{
+  font-family: 'Harry Potter Regular';
 }
