--- a/src/components/CampusTab/CampusAddForm.css
+++ b/src/components/CampusTab/CampusAddForm.css
@@ -1,5 +1,5 @@
 .CampusAddForm{
-    padding-top: 15%;
+    padding-top: 5%;
   
     margin-left: 37%;
     height: 50vh;
@@ -59,6 +59,7 @@
 }
 
 #addCampus{
-    height: 100vh;
+    width: 200vh;
+    height: 120vh;
     background: url("../../assets/dining.jpg") no-repeat center center/cover fixed;
 }
